Dashboard: fix horizontal scrollbar shown at certain resolutions
concourse/concourse#1665

--- a/assets/css/dashboard.less
+++ b/assets/css/dashboard.less
@@ -157,12 +157,17 @@
   margin-right: 30px;
 }
 
+.dashboard-team-pipeline {
+  width:  ~"calc(100% - 30px)";
+}
+
 @keyframes pipeline-running {
   0%   { background-position-x: -27px; }
   100% { background-position-x: 0px; }
 }
 
 .dashboard-pipeline {
+  overflow: hidden;
   display: inline-block;
   margin-bottom: (50px * @scale);
   margin-right: (50px * @scale);
